kubernetes/home/apps/default/tautulli/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tautulli.shaklab.com`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: tautulli
          port: 8181
  tls:
    secretName: shaklab-com-tls-certs
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Ingress
# metadata:
#   name: plexserver            # < name of ingress entry
#   namespace: default          # < namespace where place the ingress enty
# spec:
#   rules:
#   - host: plexserver.shaklab.com
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: plex-tcp
#           servicePort: pms-web   # < same label as the port in the service tcp file
#   tls:
#     secretName: shaklab-com-tls-certs
